# swagger.json
@@ -950,6 +950,43 @@
                 "operationId": "UserController.DeleteMeetup"
             }
         },
+        "/user/created-meetup-list": {
+            "get": {
+                "x-controller-name": "UserController",
+                "x-operation-name": "CreatedMeetupList",
+                "tags": ["UserController"],
+                "security": [{
+                    "jwt": []
+                }],
+                "responses": {
+                    "200": {
+                        "description": "CreatedMeetupList",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {}
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [{
+                    "name": "user_id",
+                    "in": "query",
+                    "schema": {
+                        "type": "string"
+                    }
+                }, {
+                    "name": "page",
+                    "in": "query",
+                    "schema": {
+                        "type": "number"
+                    }
+                }],
+                "operationId": "UserController.CreatedMeetupList"
+            }
+        },
 
         "/compliance/list": {
             "get": {
